# jpp

./: .clang-format  .gitignore  CMakeLists.txt
jpp/: canvas_view.hpp  color.hpp
jpp/non_member/: functions.hpp
